--- a/config/.env.development
+++ b/config/.env.development
@@ -19,3 +19,13 @@ ACCESS_TOKEN_EXPIRES_IN="3600"
 REFRESH_TOKEN_EXPIRES_IN="31536000"
 
 WEB_CLIENT_IDS="261135842954-vrbkifvj01sj4clv2e1drh5fmtc0icdr.apps.googleusercontent.com"
+
+
+
+AWS_REGION="us-east-1"
+AWS_ACCESS_KEY_ID="AKIAZJ2JZWHKJIGR4BFV"
+AWS_SECRET_ACCESS_KEY="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"
+AWS_BUCKET_NAME="s3main-bucket-social-app"
+
+
+AWS_PRE_SIGNED_URL_EXPIRES_IN_SECONDS=120
